5-Using BackgroundWorker Events

--- a/EventsDelegatesAndLambda/ThreadsAndDelegates/ThreadsAndDelegates.csproj
+++ b/EventsDelegatesAndLambda/ThreadsAndDelegates/ThreadsAndDelegates.csproj
@@ -47,8 +47,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>
-    </StartupObject>
+    <StartupObject>ThreadsAndDelegates.BackgroundWorkerDemo</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -101,6 +100,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AsyncGood.resx">
       <DependentUpon>AsyncGood.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="BackgroundWorkerDemo.resx">
+      <DependentUpon>BackgroundWorkerDemo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
