--- a/EventsDelegatesAndLambda/ThreadsAndDelegates/ThreadsAndDelegates.csproj
+++ b/EventsDelegatesAndLambda/ThreadsAndDelegates/ThreadsAndDelegates.csproj
@@ -47,7 +47,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>ThreadsAndDelegates.BackgroundWorkerDemo</StartupObject>
+    <StartupObject>ThreadsAndDelegates.UsingAThread</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -113,6 +113,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="UsingAThread.resx">
+      <DependentUpon>UsingAThread.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
